--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,6 +3,8 @@
 
 body {
     font-family: "Cormorant Garamond", serif;
+    margin: 0;
+    padding: 0;
 }
 
 h1,
@@ -12,4 +14,8 @@ h4,
 h5,
 h6 {
     font-family: "Cinzel", serif;
+}
+
+a {
+    text-decoration: none;
 }
