--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -9,3 +9,13 @@ $slytherin-green: #0d6259;
 $slytherin-silver: #5d5d5d;
 $white: #ffffff;
 $black: #000000;
+
+$gray-100: #f5f5f5;
+$gray-200: #eeeeee;
+$gray-300: #e0e0e0;
+$gray-400: #bdbdbd;
+$gray-500: #9e9e9e;
+$gray-600: #757575;
+$gray-700: #616161;
+$gray-800: #424242;
+$gray-900: #212121;
