--- a/slices/Testimonials/Testimonials.module.scss
+++ b/slices/Testimonials/Testimonials.module.scss
@@ -24,6 +24,10 @@
         margin: 15px;
         padding: 20px;
         width: calc(100% / 3 - 30px);
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: space-between;
 
         blockquote {
             color: $gryffindor-red;
@@ -34,7 +38,8 @@
 
         .rating {
             margin-top: 10px;
-
+            display: flex;
+            justify-content: center;
             svg {
                 fill: $slytherin-green;
                 height: 24px;
@@ -47,6 +52,7 @@
             display: flex;
             flex-direction: column;
             margin-top: 10px;
+            align-items: flex-end;
 
             .name {
                 color: $ravenclaw-bronze;
